src/css/content.scss
@import 'global';

$gutter: 5px;

$color-neutral-lighter: #eeeeee;
$color-neutral-light: #dddddd;
$color-neutral: #999999;
$color-alert: #D52354;

$color-red: #FF0000;
$color-purple: #A85AD4;
$color-light-purple: #CFC8F1;
$color-bright-purple: #8747FE;
$color-orange: #eb6420;
$color-green: #009800;
$color-black: #000000;
$color-white: #ffffff;
$color-blue: #0000ff;
$color-light-blue: #12a4d5;
$color-darker-green: #2cb528;
$color-dark-yellow: #DAA520;

.k2dashboard,
.passwordform {
    max-width: 1680px;
    margin: 24px auto 0;
    padding: 0 180px;
}

.passwordform {
    max-width: 1000px;
}

.k2-inactive {
  opacity: 0.2;
}
.k2-hourly,
.k2-daily,
.k2-weekly,
.k2-monthly,
.k2-web,
.k2-core,
.k2-integration.server,
.k2-design,
.k2-ops,
.k2-infra,
.k2-improvement,
.k2-task,
.k2-external,
.k2-demolition,
.k2-newfeature {
  background-image: none !important;
}

.k2-hourly.active { background-color: $color-alert !important; }
.k2-daily.active { background-color: $color-orange !important; color: white; }
.k2-weekly.active { background-color: $color-green !important; color: white; }
.k2-monthly.active { background-color: $color-purple !important; }
.k2-web.active { background-color: #274073 !important; color: white; }
.k2-core.active { background-color: #ff0066 !important; color: white; }
.k2-integration.server.active { background-color: #c7def8 !important; }
.k2-design.active { background-color: #00a4d3 !important; color: white; }
.k2-ops.active { background-color: #37916C !important; color: white; }
.k2-infra.active { background-color: #181c99 !important; color: white; }
.k2-improvement.active { background-color: #604c8d !important; color: white; }
.k2-task.active { background-color: #9C5959 !important; color: white; }
.k2-newfeature.active { background-color: #A52A2A !important; color: white; }
.k2-external.active { background-color: #A7B8EF !important; color: white; }
.k2-demolition.active { background-color: #6EB7C1 !important; color: white; }

.k2-reviewing {
  &.active { background-color: $color-neutral; }
  &.inactive { @extend .k2-inactive; }
}
.discussion-sidebar-item h6 {
    margin-bottom: 8px;
}
.discussion-sidebar-item.discussion-sidebar-item.no-border {
    margin: 0 !important;
    border: 0 !important;
    position: relative;

    label {
        color: #eee;
        font-size: 22px;
        left: 106%;
        top: 12px;
        position: absolute;
    }
}
.panel {
  border: 1px solid $color-neutral-light;
  border-radius: 3px;
  &.hourly {
    .label {
      display: none;
    }

    .panel-title {
      background-color: $color-alert;
      color: $color-white;
    }
  }
  &.daily {
    .label {
      display: none;
    }

    .panel-title {
      background-color: $color-orange;
      color: $color-white;
    }
  }
  &.weekly {
    .label {
      display: none;
    }

    .panel-title {
      background-color: $color-green;
      color: $color-white;
    }
  }
  &.monthly {
    .label {
      display: none;
    }

    .panel-title {
      background-color: $color-purple;
      color: $color-white;
    }
  }
  &.waq {
    .panel-title {
      color: $color-black;
    }
  }
}
.label {
  margin-right: $gutter;
  color: $color-white;
  border: none !important;

  &.hourly,
  &.overdue,
  &.closed {
    background-color: $color-alert !important;
  }
  &.daily {
    background-color: $color-orange !important;
  }
  &.unassigned,
  &.weekly {
    background-color: $color-green !important;
  }
  &.monthly {
    background-color: $color-purple !important;
  }
  &.newhire,
  &.onstaging,
  &.onproduction {
    background-color: $color-light-blue !important;
  }
  &.underreview,
  &.waiting,
  &.planning,
  &.hold {
    background-color: $color-neutral-light !important;
  }
  &.whatsnext {
    background-color: $color-bright-purple !important;
  }
}
.muted {
  color: $color-neutral;
}

.panel-title {
  background: $color-neutral-lighter;
  font-size: 14px;
  margin: 0px;
  padding: $gutter ($gutter * 2);
}

.panel-item {
  border-top: 1px solid $color-neutral-light;
  display: block;
  padding: $gutter;
    .AvatarStack {
        display: inline-block !important;
        float: right !important;
        top: -5px;
    }
}

.panel-item-meta {
  color: $color-neutral;
  font-size: 10px;
  float: right;
  & > span,
  & > a,
  .octicon {
    padding-right: $gutter;
  }
}

.panel-footer {
  @extend .panel-title;
  border-top: 1px solid $color-neutral-light;
}

.issue {
  line-height: 1em;

  &:hover {
    text-decoration: none;
  }
  // define before overdue so overdue issues will still appears red, since
  // issue erosion still happens for "held issues"
  &.help-wanted,
  &.challenge-sent,
  &.hold {
    color: darken($color-neutral-light, 20%) !important;
    .issue-link {
      color: darken($color-neutral-light, 20%) !important;
    }
    .label {
      background-color: darken($color-neutral-light, 20%) !important;
    }
  }
  &.planning {
    color: $color-dark-yellow !important;
  }
  &.overdue {
      color: $color-alert !important;
      // Only show the alert icon if the item is overdue
      .octicon-alert {
        display: inline;
      }
  }
  &.reviewing {
      color: $color-neutral-light !important;
      .issue-link {
        color: $color-neutral-light !important;
      }
    .label {
      background-color: $color-neutral-light !important;
    }
  }
  &.waiting-for-customer,
  &.contributor-assigned {
    color: $color-light-purple;
  }
}

// Add some padding when we put issues in a box-row
.Box-row .issue {
  // padding-left: 35px;
  display: block;
}

.assignee {
  padding-left: ($gutter * 4);
}

.hide {
  display: none;
}

/* For some reason our tabs don't get the default cursor behavior */
.tabnav-tabs a {
  cursor: pointer;
}

.milestones,
.issueList {
  position: relative;

  .legend {
    position: absolute;
    top: 0;
    left: -210px;
    width: 200px;
    text-align: right;

    > div {
      line-height: 1.5em;
    }
  }
}

.travis-status {
  color: $color-orange;

  &.success {
    color: $color-darker-green;
  }
  &.failure {
    color: $color-alert;
  }
  &.unknown {
    color: $color-neutral;
  }
}

.mergeable-state {
  color: $color-dark-yellow;

  &.CONFLICTING {
    color: $color-alert;
  }

  &.MERGEABLE:not(.CHANGES_REQUESTED):not(.REVIEW_REQUIRED) {
    color: $color-darker-green;
  }

  &.DRAFT {
    color: $color-neutral;
  }
}

.light {
  display: inline-block;
  border-radius: 5px;
  margin: 0 5px;
  position: relative;
  top: 1px;
  color: white;
  padding-left: 5px;

  &.red {
    background-color: $color-neutral;
  }

  &.green {
    background-color: $color-green;
  }
}

.milestone {
  margin-bottom: 40px;
}

.btn-group {
  .btn {
    border-radius: 0px;
    border-right-width: 0px;

    &:first-child {
      border-top-left-radius: 4px;
      border-bottom-left-radius: 4px;
    }
    &:last-child {
      border-top-right-radius: 4px;
      border-bottom-right-radius: 4px;
      border-right-width: 1px;
    }
  }
}

.pull-left {
  float: left;
}

.pull-right {
  float: right;
}

.Box-row {
  position: relative;
  padding: 20px !important;
}

.Box-row .form-inline {
  opacity: 0.3;
  padding-left: 0;
  padding-top: 10px;
  position: relative;

  input[type="text"] {
    width: 60%;
  }
}

.actionbuttons {
  opacity: 0;
  transition: opacity 150ms ease-in-out;
  position: absolute;
  left: 100%;
  white-space: nowrap;
  padding: 12px 20px 20px;
  top: 0
}

.Box-row:hover .actionbuttons {
  opacity: 1;
}

.timeline-comment-wrapper.lastcomment {
  padding-left: 0;
  margin-top: 8px;
  margin-bottom: 0;

  p:last-child {
    margin-bottom: 0;
  }

  &.hold {
    color: $color-neutral-light;
  }

  img {
    max-width: 25% !important;
  }

  .edit-comment-hide {
    padding: 15px;
  }

  ul, ol {
    margin-left: 40px;
  }
}

// This hides a little arrow that shows up to the left of the comment box
.timeline-comment-wrapper > .timeline-comment::before,
.timeline-new-comment .timeline-comment::before,
.timeline-comment-wrapper > .timeline-comment::after,
.timeline-new-comment .timeline-comment::after{
  display: none !important;
}

.Box-row:hover {
  .form-inline {
    opacity: 1;
  }
}

.form-inline {
  .checkbox {
    display: inline;
    margin: 0 10px;
  }
}

.k2-extension-qa-guidelines-toggle-container {
  float: left;
  margin-top: 5px;
}

.k2-extension-qa-guidelines {
  display: none;
  margin-left: 8px;
  margin-right:8px;

  &.show {
    display: block;
  }
}

.k2-extension-qa-guideline-list-item {
  list-style: none;
}

.k2-extension-qa-guideline-list-item {
  margin-bottom: 8px;
}

.table-list-header-toggle .btn-link {
  padding-right: 15px;
  padding-left: 15px;
}
.table-list-header-toggle .btn-link.selected {
  font-weight: bold;
}

.email-hidden-toggle,
.email-hidden-reply {
  display: none;
}

.edit-comment-hide ul {
  padding-left: 30px !important;
}

.btn-group-grid {
  display: flex;
  flex-flow: row wrap;

  .btn {
    margin: 0 2px 2px 0;
    flex: auto;

    &.k2-web {
      width: 100%;
    }
  }
}

.k2picker-wrapper,
.k2pickertype-wrapper,
.k2togglereviewing-wrapper,
.k2comments-wrapper {
  .btn-group {
    display: flex;

    .btn {
      flex-basis: 0;
      flex-grow: 1;
    }
  }
}

#partial-discussion-sidebar[data-url^="/Expensify/"] {
  position: sticky;
  top: 60px;
}

